--- a/readme
+++ b/readme
@@ -9,3 +9,4 @@ Elgg 1.8
 
 -----Installation---------
 same steps to install elgg plugin 
+For more details see http://docs.elgg.org/wiki/Configuration/Plugins
